internal/gatewayapi/testdata/listenerset-conflict-listeners.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: composite-gateway
    namespace: gateway-xls
  spec:
    allowedListeners:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            allow-xls: "true"
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: core-http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: conflict-listener
      port: 8888
      protocol: HTTP
  status:
    attachedListenerSets: 3
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: core-http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: conflict-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
infraIR:
  gateway-xls/composite-gateway:
    proxy:
      listeners:
      - name: gateway-xls/composite-gateway/core-http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      - name: gateway-xls/composite-gateway/conflict-listener
        ports:
        - containerPort: 8888
          name: http-8888
          protocol: HTTP
          servicePort: 8888
      - name: gateway-xls/composite-gateway/gateway-xls/conflict-listener-from-same-xls/conflict-listener-1
        ports:
        - containerPort: 8089
          name: http-8089
          protocol: HTTP
          servicePort: 8089
      - name: gateway-xls/composite-gateway/gateway-xls/conflict-listener-from-two-xlss/good-listener
        ports:
        - containerPort: 8090
          name: http-8090
          protocol: HTTP
          servicePort: 8090
      - name: gateway-xls/composite-gateway/gateway-xls/listener-conflict-with-gateway/good-listener
        ports:
        - containerPort: 8091
          name: http-8091
          protocol: HTTP
          servicePort: 8091
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: composite-gateway
          gateway.envoyproxy.io/owning-gateway-namespace: gateway-xls
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: gateway-xls/composite-gateway
      namespace: envoy-gateway-system
listenerSets:
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: conflict-listener-from-same-xls
    namespace: gateway-xls
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: conflict-listener-1
      port: 8089
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: conflict-listener-2
      port: 8089
      protocol: HTTP
    parentRef:
      name: composite-gateway
  status:
    conditions:
    - lastTransitionTime: null
      message: Some listeners are invalid
      reason: ListenersNotValid
      status: "True"
      type: Accepted
    - lastTransitionTime: null
      message: Some listeners are not programmed
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: conflict-listener-1
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: All listeners for a given port must use a unique hostname
        reason: HostnameConflict
        status: "True"
        type: Conflicted
      - lastTransitionTime: null
        message: All listeners for a given port must use a unique hostname
        reason: HostnameConflict
        status: "False"
        type: Accepted
      - lastTransitionTime: null
        message: All listeners for a given port must use a unique hostname
        reason: HostnameConflict
        status: "False"
        type: Programmed
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: conflict-listener-2
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: conflict-listener-from-two-xlss
    namespace: gateway-xls
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: conflict-listener
      port: 8089
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: good-listener
      port: 8090
      protocol: HTTP
    parentRef:
      name: composite-gateway
  status:
    conditions:
    - lastTransitionTime: null
      message: Some listeners are invalid
      reason: ListenersNotValid
      status: "True"
      type: Accepted
    - lastTransitionTime: null
      message: Some listeners are not programmed
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: All listeners for a given port must use a unique hostname
        reason: HostnameConflict
        status: "True"
        type: Conflicted
      - lastTransitionTime: null
        message: All listeners for a given port must use a unique hostname
        reason: HostnameConflict
        status: "False"
        type: Accepted
      - lastTransitionTime: null
        message: All listeners for a given port must use a unique hostname
        reason: HostnameConflict
        status: "False"
        type: Programmed
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: conflict-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: good-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: listener-conflict-with-gateway
    namespace: gateway-xls
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: conflict-listener
      port: 8888
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: good-listener
      port: 8091
      protocol: HTTP
    parentRef:
      name: composite-gateway
  status:
    conditions:
    - lastTransitionTime: null
      message: Some listeners are invalid
      reason: ListenersNotValid
      status: "True"
      type: Accepted
    - lastTransitionTime: null
      message: Some listeners are not programmed
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: All listeners for a given port must use a unique hostname
        reason: HostnameConflict
        status: "True"
        type: Conflicted
      - lastTransitionTime: null
        message: All listeners for a given port must use a unique hostname
        reason: HostnameConflict
        status: "False"
        type: Accepted
      - lastTransitionTime: null
        message: All listeners for a given port must use a unique hostname
        reason: HostnameConflict
        status: "False"
        type: Programmed
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: conflict-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: good-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
xdsIR:
  gateway-xls/composite-gateway:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-gateway-xls-composite-gateway-e1ee602f
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: gateway-xls/composite-gateway
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-gateway-xls-composite-gateway-e1ee602f
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: gateway-xls/composite-gateway
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway-xls
        sectionName: core-http
      name: gateway-xls/composite-gateway/core-http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    - address: 0.0.0.0
      externalPort: 8888
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway-xls
        sectionName: conflict-listener
      name: gateway-xls/composite-gateway/conflict-listener
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 8888
    - address: 0.0.0.0
      externalPort: 8089
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway-xls
        sectionName: conflict-listener-1
      name: gateway-xls/composite-gateway/gateway-xls/conflict-listener-from-same-xls/conflict-listener-1
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 8089
    - address: 0.0.0.0
      externalPort: 8090
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway-xls
        sectionName: good-listener
      name: gateway-xls/composite-gateway/gateway-xls/conflict-listener-from-two-xlss/good-listener
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 8090
    - address: 0.0.0.0
      externalPort: 8091
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway-xls
        sectionName: good-listener
      name: gateway-xls/composite-gateway/gateway-xls/listener-conflict-with-gateway/good-listener
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 8091
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
